# gen-cli

./: README.md  pyproject.toml
tests/: test_cli.py
